--- a/pages/nearby/nearby.wxml
+++ b/pages/nearby/nearby.wxml
@@ -26,10 +26,12 @@
             <text class="tel">{{tips[index].tel}}</text>
           </view>
         </navigator>
-          <view class="near-goto">
-            <image src="../../image/goto.png"></image>
-            <text class="goto">去这里</text>
-          </view>
+        <navigator hover-class="none" url="../route/route?startName={{siteName}}&startPoint={{point}}&endName= {{tips[index].name}}&endPoint={{tips[index].location}}&ways=0" >
+            <view class="near-goto">
+              <image src="../../image/goto.png"></image>
+              <text class="goto">去这里</text>
+            </view>
+          </navigator>
 
         </view>
       </view>
